# eda

./: .clang-format  .gdb_history  CMakeLists.txt  README.md  packages.cmake
example/: CMakeLists.txt  lv2.hpp
example/echo/: CMakeLists.txt  echo.cpp  lv2.hpp  manifest.ttl
example/tanh/: CMakeLists.txt  manifest.ttl  tanh.cpp
include/eda/: block.hpp  eda.hpp  evaluator.hpp  expr2.hpp  expression.hpp  frame.hpp  resampling.hpp  syntax.hpp
include/eda/internal/: util.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  benchmarks.cpp  block.cpp  echo.cpp  expr2.cpp  expression.cpp  scratchpad.cpp
